// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat reducers AGENTS_AVAILABLE updates state with the new value 1`] = `
Object {
  "agentTyping": false,
  "agentsAvailable": undefined,
  "chatContainerHidden": true,
  "chatLauncherHidden": true,
  "initializedState": "uninitialized",
  "transcript": Array [],
  "welcomeFormRegistered": false,
}
`;

exports[`chat reducers AGENTS_AVAILABLE updates state with the new value 2`] = `
Object {
  "agentTyping": false,
  "agentsAvailable": undefined,
  "chatContainerHidden": true,
  "chatLauncherHidden": true,
  "initializedState": "uninitialized",
  "transcript": Array [],
  "welcomeFormRegistered": false,
}
`;

exports[`chat reducers NEW_WEBCHAT_SESSION updates state with initial state merged with current visibility state and "initialized" set to "LOADING" 1`] = `
Object {
  "agentTyping": false,
  "agentsAvailable": true,
  "chatContainerHidden": false,
  "chatLauncherHidden": false,
  "initializedState": "loading",
  "transcript": Array [],
  "welcomeFormRegistered": false,
}
`;
